--- a/C++Yapı.adoc
+++ b/C++Yapı.adoc
@@ -20,7 +20,27 @@ Bu komutu kullanarak artık programımızın istediğimiz  yerinde bu PI değiş
 
 main() : Bu fonksiyon C programlama dersinde olduğu gibi C++ programlama dili için de ana fonksiyondur ve diğer fonksiyonların çalışması için gereklidir.
 
+IMPORTANT: C++ büyük-küçük harfe duyarlı bir dildir. Örneğin karakter tipinin değişkeni char’dırr. Eğer bunun yerine Char veya CHAR yazarsanız derleyici bunu anlayamaz. 
 
+Harf duyarlılığının yanında C++ dili aşağıdak özelliklere de sahiptir:
+
+* derleyicinin kaynak kodu derlemeden önce çalıştırılacak görevleri belirten önişlemci yönergeleri
+
+* namespace’leri dahil etmek için kullanılan using yönergeleri
+
+* dönüş tipi, isim ve parametrelerden oluşan fonksiyon başlığı
+
+* fonksiyonun yaptığı işlemlerin bulunduğu fonksiyon gövdesi 
+
+*  C++ kaynak kodu dosyasındaki ifadeler
+
+*  kodu anlaşılabilir kılmak için yorum satırla
+rı
+*  fonksiyon çağırıcıya geri değer döndüren return ifadeleri
+ 
+ * ifade gövdeleri için kullanılan süslü parantezler
+
+C++ dili okunabilirliği kolaylaştırmak için whitespace kullanımına izin verir. Bir kaç istisna dışında derleyici whitespace karakterleri görmezden gelir.
 
 
 
