--- a/C++StatikDeğişkenler.adoc
+++ b/C++StatikDeğişkenler.adoc
@@ -43,7 +43,10 @@ Yukarıdaki örnekte gol_at isminde fonksiyon oluşturduk. Bu fonksiyon: gol ism
 
 Programın çıktısı bu şekildedir:
 
-http://firateski.com/wp-content/uploads/2015/11/static-degisken.bmp
+  Gol sayisi:1
+  Gol sayisi:2
+  Gol sayisi:3
+  Gol sayisi:4
 
 Eğer biz gol ismindeki değişkeni static olarak tanımlamasaydık ekrana yazdırılan değer her seferinde 1(bir) olacaktı çünkü değişkene ilk değer olarak 0(sıfır) değerini verdik ve ekrana yazdırmadan önce değeri 1(bir) tane arttırdık. Dolayısıyla Static değişken sayesinde değişken; fonksiyon her çağrıldığında yeniden oluşturulmak yerine sadece ilk seferde oluşturulup, sonrasında global değişkenler gibi değeri korunabiliyor. Bu örnekle birlikte static kavramının nasıl kullanıldığını ve mantığını anladık.
 
